--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Mulish&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Mulish&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+:root {
+	--main-background-color: rgba(60, 100, 177, 0.1);
+	--secondary-background-color: white;
+	--basic-link-color: #3c64b1;
+	--logo-color: #3c64b1;
+	--basic-button-text-color: #3c64b1;
+	--basic-button-border-color: #3c64b1;
+}
 
 * {
 	box-sizing: border-box;
@@ -14,54 +21,71 @@ html {
 }
 
 body {
-	background-color: rgba(60, 100, 175, 0.1);
+	background-color: var(--main-background-color);
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+h2 {
+	font-size: 2rem;
+	font-weight: 600;
 }
 
 .wrapper {
-	width: 78%;
 	max-width: 1100px;
 	margin: 0 auto;
 }
 
-a {
-	text-decoration: none;
-	color: inherit;
+.white-wrapper {
+	background-color: var(
+		--secondary-background-color,
+		var(--main-background-color, yellow)
+	);
+}
+
+.main-container {
+	padding: 80px 0;
+}
+
+.basic-container-flex {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 /* Header */
 
 header {
 	height: 88px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 }
 
 .logo {
+	color: var(--logo-color);
 	font-size: 1.5rem;
-	font-weight: bold;
 	font-family: "Lato", sans-serif;
+	font-weight: bold;
 	text-transform: uppercase;
-	color: rgba(60, 100, 175);
 }
 
 nav {
-	text-align: center;
-	margin-left: 7.5vw;
+	margin-left: 10%;
 }
 
 nav > a {
+	font-weight: 500;
 	margin-left: 1.5rem;
-	font-weight: 600;
+	font-size: 0.875rem;
 }
 
 nav > .active,
 nav > a:hover {
-	color: rgba(60, 100, 175);
+	color: var(--basic-link-color);
 }
 
 .login-register {
-	text-align: right;
 	font-weight: bold;
 }
 
@@ -70,28 +94,21 @@ nav > a:hover {
 }
 
 .login-register > a:first-child {
-	color: rgba(60, 100, 175);
+	color: var(--basic-link-color);
 }
 
 .login-register > a:last-child {
-	background-color: rgba(60, 100, 175);
-	color: rgb(255, 255, 255);
+	color: #fff;
+	background-color: #3c64b1;
 }
 
 /* Main section */
 
-main {
-	padding: 80px 0;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.video-container {
-	display: flex;
-	align-items: center;
-	width: 45vw;
+main > .video-container {
+	width: 58%;
 	max-width: 635px;
+	display: flex;
+	justify-content: center;
 }
 
 .video-container iframe {
@@ -99,134 +116,120 @@ main {
 	aspect-ratio: 16/9;
 }
 
-main .text-container {
-	padding-left: 30px;
+main > .text-container {
+	width: 42%;
 	max-width: 445px;
 }
 
-main .text-container a:first-child {
-	font-size: 0.875;
-	color: rgba(60, 100, 175);
-	text-transform: uppercase;
+main > .text-container > a:first-child {
+	color: var(--basic-link-color);
 	font-weight: 800;
+	text-transform: uppercase;
+	font-size: 0.875rem;
 }
 
 h1 {
-	font-size: 2.75rem;
 	font-weight: 600;
+	font-size: 2.75rem;
 	margin-top: 12px;
+	letter-spacing: 0.2px;
 }
 
-main .text-container p {
+main > .text-container > p {
 	color: #737b7d;
 	margin-top: 40px;
 }
 
-main .text-container a:last-child {
+main > .text-container > a:last-child {
 	display: inline-block;
-	color: rgba(60, 100, 175);
-	font-size: 0.875rem;
+	color: var(--basic-button-text-color);
 	font-weight: 600;
-	margin-top: 56px;
-	border: 1px solid rgba(60, 100, 175);
+	font-size: 0.875rem;
+	border: 1px solid var(--basic-button-border-color);
+	margin-top: 68px;
 	padding: 12px 18px;
 }
 
-/* About us section */
+/* About section */
 
-.white-wrapper {
-	background-color: rgb(255, 255, 255);
-}
-
-section.about {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 80px 0;
-}
-
-.about .text-container {
+.about > .text-container,
+.about > .img-container {
 	width: 50%;
 	max-width: 540px;
 }
 
-/* .about .text-container h2 {
-	font-size: 2rem;
-	font-weight: 600;
-} */
-
-h2 {
-	font-size: 2rem;
-	font-weight: 600;
-}
-
-.services {
+.about > .text-container > .services {
 	display: flex;
 	justify-content: space-between;
 	margin-top: 56px;
 }
 
-.service {
+.about > .text-container > .services > .service {
 	width: 50%;
 	max-width: 255px;
 }
 
-.service p {
-	margin-top: 1rem;
+.about > .text-container > .services > .service > img {
+	width: 32px;
 }
 
-.about .img-container {
-	width: 50%;
-	max-width: 540px;
+.about > .text-container > .services > .service > p {
+	color: #737b7d;
+	margin-top: 16px;
 }
 
-.about .img-container img {
+.about > .img-container img {
 	width: 100%;
 }
 
 /* Footer */
-
-footer {
-	padding: 80px 0;
-}
 
 footer > h2 {
 	text-align: center;
 }
 
 footer > p {
-	text-align: center;
 	color: #737b7d;
-	margin-top: 1.5rem;
+	text-align: center;
+	margin-top: 24px;
 }
 
-footer .products {
+footer > .products {
 	display: flex;
 	justify-content: space-between;
-	margin-top: 1.5rem;
+	margin-top: 24px;
 }
 
-.products > .product {
+footer > .products > .product {
 	width: 32%;
-	margin-top: 1.5rem;
+	max-width: 350px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 24px;
 }
 
-.product > h3 {
-	margin-top: 1.5rem;
+footer > .products > .product > img {
+	width: 40px;
 }
 
-.product > p {
-	text-align: center;
-	font-size: 0.875rem;
-	margin-top: 0.75rem;
-}
-
-.product > a {
-	color: rgba(60, 100, 175);
+footer > .products > .product > h3 {
 	font-weight: 600;
-	margin-top: 1.325rem;
-	padding: 0.75rem 0;
+	font-size: 1.125rem;
+	margin-top: 24px;
+}
+
+footer > .products > .product > p {
+	color: #737b7d;
+	font-size: 0.875rem;
+	text-align: center;
+	margin-top: 12px;
+}
+
+footer > .products > .product > a {
+	color: var(--basic-link-color);
+	font-size: 0.875rem;
+	font-weight: bold;
+	margin-top: 22px;
+	padding: 12px 0;
 }
